Prevent sticky behavior on mobile (it would just overlap video with chapter list)

--- a/ova/static/css/imports/course.css
+++ b/ova/static/css/imports/course.css
@@ -187,8 +187,6 @@ background:
 .chapters {
   grid-column: span 12;
   order: 2;
-  position: sticky !important;
-  top: 0;
   width: 100%;
   z-index: 1;
 }
@@ -419,9 +417,7 @@ section.course-page svg[data-icon="check-circle"] circle {
 
 .chapters + .content {
   grid-column: span 12;
-  inset-block-start: 0;
   order: 1;
-  position: sticky;
   width: 100%;
 }
 
@@ -677,12 +673,16 @@ section.overview {
 
   .chapters {
     grid-column: span 4;
+    inset-block-start: 0;
     order: unset;
+    position: sticky !important;
   }
 
   .chapters + .content {
     grid-column: span 8;
+    inset-block-start: 0;
     order: unset;
     padding-inline-start: 1.6rem;
+    position: sticky;
   }
 }
